--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -20,9 +20,9 @@
     display: flex;
     align-items: center;
     flex: 0.7;
-    background-color: whitesmoke;
+    background-color: #e9eef6;
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 50px;
 }
 
 .header-middle > .MuiSvgIcon-root {
