--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,6 +3,12 @@
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid whitesmoke;
+    padding: 10px 20px;
+}
+
+.header-left img {
+    height: 120px;
+    width: 120px;
 }
 
 .header-left {
